Modificando arquivos para fazer o import de uma forma correta

--- a/app/assets/stylesheets/active_admin/components/_panels.scss
+++ b/app/assets/stylesheets/active_admin/components/_panels.scss
@@ -1,6 +1,7 @@
+@import "active_admin/mixins";
 // ----------------------------------- Helper class to apply to elements to make them sections
 .section, .panel{ @include section; }
 
-// ----------------------------------- Sidebar Sections 
+// ----------------------------------- Sidebar Sections
 
 .sidebar_section { @include section; }
