--- a/app/assets/stylesheets/active_admin/pages/_dashboard.scss
+++ b/app/assets/stylesheets/active_admin/pages/_dashboard.scss
@@ -1,5 +1,6 @@
+@import "active_admin/mixins";
 table.dashboard {
-  width: 100%; 
+  width: 100%;
   td { border-bottom: none; }
   .dashboard_section { @include section; }
 }
