--- a/app/assets/stylesheets/active_admin/_typography.css.scss
+++ b/app/assets/stylesheets/active_admin/_typography.css.scss
@@ -1,7 +1,8 @@
+@import "active_admin/mixins";
 // Adapted from Blueprint CSS Framework
 //
 // Copyright (c) 2007 - 2010 blueprintcss.org
-// 
+//
 // Permission is hereby granted, free of charge, to any person
 // obtaining a copy of this software and associated documentation
 // files (the "Software"), to deal in the Software without
@@ -10,10 +11,10 @@
 // copies of the Software, and to permit persons to whom the
 // Software is furnished to do so, subject to the following
 // conditions:
-// 
+//
 // The above copyright notice and this permission notice shall be
 // included in all copies or substantial portions of the Software.
-// 
+//
 // THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
 // EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
 // OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
@@ -28,9 +29,9 @@ html { font-size:100.01%; }
 body { font-size: 75%; font-family: "Helvetica Neue", Arial, Helvetica, sans-serif; }
 
 // Headings
-h1,h2,h3,h4,h5,h6 { 
-  font-weight: normal; 
-  color: $primary-color; 
+h1,h2,h3,h4,h5,h6 {
+  font-weight: normal;
+  color: $primary-color;
   img { margin: 0; }
 }
 
@@ -42,8 +43,8 @@ h5 { font-size: 1em; font-weight: bold; margin-bottom: 1.5em; }
 h6 { font-size: 1em; font-weight: bold; }
 
 
-p { 
-  margin: 0 0 1.5em; 
+p {
+  margin: 0 0 1.5em;
 
   .left     { margin: 1.5em 1.5em 1.5em 0; padding: 0; }
   .right { margin: 1.5em 0 1.5em 1.5em; padding: 0; }
