--- a/app/assets/stylesheets/active_admin/components/_blank_slates.scss
+++ b/app/assets/stylesheets/active_admin/components/_blank_slates.scss
@@ -1,7 +1,8 @@
+@import "active_admin/mixins";
 .blank_slate_container {
   clear: both;
   text-align: center;
-  
+
   .blank_slate {
     @include rounded;
     -webkit-font-smoothing: antialiased;
@@ -12,7 +13,7 @@
     font-weight: bold;
     padding: 14px 25px;
     text-align: center;
-    
+
     small {
       display: block;
       font-size: 0.9em;
