--- a/app/assets/stylesheets/active_admin/components/_comments.css.scss
+++ b/app/assets/stylesheets/active_admin/components/_comments.css.scss
@@ -1,4 +1,5 @@
-// -------------------------------------- Admin Notes 
+@import "active_admin/mixins";
+// -------------------------------------- Admin Notes
 .comments {
 
   .active_admin_comment {
