--- a/app/assets/stylesheets/active_admin/components/_table_tools.css.scss
+++ b/app/assets/stylesheets/active_admin/components/_table_tools.css.scss
@@ -1,3 +1,4 @@
+@import "active_admin/mixins";
 .table_tools {
   display: block;
   margin-bottom: 14px;
@@ -8,11 +9,11 @@
   .table_tools_button + .table_tools_button {
     margin-left: 6px;
   }
-  
+
   .table_tools_button + .table_tools_segmented_control {
     margin-left: 6px;
   }
-  
+
   .table_tools_segmented_control + .table_tools_button {
     margin-left: 6px;
   }
@@ -25,10 +26,10 @@ a.table_tools_button {
   text-decoration: none;
   padding: 4px 14px 4px;
   position: relative;
-  
+
   &.selected {
     @include box-shadow(0 1px 0px rgba(0,0,0,0.10), 0 0 0 1px #FFF inset, 0 0 10px rgba(120,175,220,0.36));
-    
+
     &:active {
       @include box-shadow(0 1px 0px rgba(0,0,0,0.10), 0 0 0 1px #FFF inset, 0 0 10px rgba(120,175,220,0.36), 0, 1px, 2px, rgba(0,0,0,0.30));
     }
@@ -36,7 +37,7 @@ a.table_tools_button {
 
   &.dropdown_button {
     padding-right: 20px;
-    
+
     .arrow {
       border-color: #777 transparent transparent;
       border-style: solid;
@@ -56,46 +57,46 @@ a.table_tools_button {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  
+
   li {
     display: inline-block;
     list-style-image: none;
     list-style-type: none;
     margin-left: -7px;
     white-space: nowrap;
-    
+
     a {
       border-radius: 0px;
     }
-    
+
     &:first-child {
       margin-left: 0;
-      
+
       a {
         border-top-left-radius: 12px;
         border-bottom-left-radius: 12px;
       }
     }
-    
+
     &:last-child {
       a {
         border-top-right-radius: 12px;
         border-bottom-right-radius: 12px;
       }
     }
-    
+
     &.selected {
       a {
         background: #F0F0F0;
         @include box-shadow(0 1px 1px 0 rgba(0,0,0,0.1) inset);
         color: #8a8a8a;
         cursor: default;
-        
+
         &:hover {
           color: #8a8a8a;
         }
       }
     }
   }
-  
+
 }
