--- a/app/assets/stylesheets/active_admin/structure/_title_bar.scss
+++ b/app/assets/stylesheets/active_admin/structure/_title_bar.scss
@@ -1,3 +1,4 @@
+@import "active_admin/mixins";
 #title_bar {
   @include section-header;
   @include clearfix;
@@ -6,36 +7,36 @@
   display: table;
   border-bottom-color: #EEE;
   width: 100%;
-  position: relative; 
-  margin: 0; 
+  position: relative;
+  margin: 0;
   margin-bottom: 15px;
-  padding: 10px $horizontal-page-margin; 
+  padding: 10px $horizontal-page-margin;
   z-index: 800;
-  
+
   #titlebar_left, #titlebar_right {
     height: 50px;
     vertical-align: middle;
     display: table-cell;
   }
-  
+
   #titlebar_right {
     text-align: right;
   }
-  
-  h2 { 
+
+  h2 {
     margin: 0;
-    padding: 0; 
+    padding: 0;
     font-size: 2.6em;
     font-weight: bold;
   }
 
-  .action_items { 
-    a { 
-      @include light-button; 
+  .action_items {
+    a {
+      @include light-button;
       padding: 12px 17px 10px;
-      span.icon { vertical-align: bottom; margin-right: 4px;} 
+      span.icon { vertical-align: bottom; margin-right: 4px;}
       margin: 0px;
-      
+
       &:hover{
         @include icon-color(#000);
       }
